@@ -62,6 +62,7 @@
                      new script parameters cache_age, retry_count, timeout
                      new script caching options "off", "async", "sync"
     * windows_agent: increased maximum local/plugin script output length to 512kB
+                     (output buffer now grows dynamically)
 
     Notifications:
     * notify.py: Matching service level: Use the hosts service level if a
